# internal/router/interaction.router.go
@@ -13,11 +13,13 @@ import (
 func InteractionRouter(app *gin.Engine, db *pgxpool.Pool, rdb *redis.Client) {
 	interactionRouter := app.Group("/interaction")
 
-	interactionRepository := repository.NewInteractionRepository(db)
-	interactionService := service.NewInteractionService(interactionRepository)
+	interactionRepository := repository.NewInteractionRepository()
+	interactionService := service.NewInteractionService(interactionRepository, db, rdb)
 	interactionController := controller.NewInteractionController(interactionService)
 	interactionRouter.Use(middleware.CORSMiddleware)
 	interactionRouter.Use(middleware.VerifyJWT)
 	interactionRouter.Use(middleware.IsBlackListed(rdb))
 	interactionRouter.POST("/content", interactionController.PostContent)
+	interactionRouter.POST("/following", interactionController.FollowingUser)
+	interactionRouter.POST("/like", interactionController.LikePosts)
 }
